add fonts ArchitectsDaughter.ttf

--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -1,5 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Arvo:400,700,400italic);
 
+@font-face { font-family: hand-written; src: url('../fonts/ArchitectsDaughter.ttf'); } 
+
 /* MeyerWeb Reset */
 
 html, body, div, span, applet, object, iframe,
@@ -27,7 +29,7 @@ time, mark, audio, video {
 
 body {
   padding:10px 50px 0 0;
-  font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family:hand-written, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	color: #232323;
 	background-color: #FBFAF7;
