--- a/_includes/themes/dinky/default.html
+++ b/_includes/themes/dinky/default.html
@@ -76,7 +76,7 @@
       </section>
 
       <footer>
-      <p><small><span style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); display: inline-block;">© June 1st 2013</span></small></p>
+      <p><small><span style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); display: inline-block;">©</span> June 1st 2013</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
